First Homework 6 Commit added bigdata.jar to settings.json created AuctionSystem, AuctionTable, Auction public classes with empty methods and instance variables added ClosedAuctionException.java

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,8 @@
         80
     ],
     "java.format.settings.url": "eclipse-formatter.xml",
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "C:\\Users\\zheng\\Desktop\\CSE-214\\Homework_6\\bigdata.jar"
+    ],
 }
