--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     "java.format.settings.url": "eclipse-formatter.xml",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "C:\\Users\\zheng\\Desktop\\CSE-214\\Homework_6\\bigdata.jar"
+        "..\\CSE-214\\Homework_6\\bigdata.jar"
     ],
 }
